Fix body overflow

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
 /* Melhora tipografia */
 body {
   line-height: 1.5;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
 }
 
